<resources>

    <!--App Strings-->

    <string name="app_name">KickIT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu Strings-->

    <string name="menu_home">Home</string>
    <string name="menu_bucket_lists">Bucket Lists</string>
    <string name="menu_suggest_challenge">Suggest A Challenge</string>
    <string name="menu_my_bucket_list">My Bucket List</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_login">Login</string>
    <string name="menu_comrades">Comrades</string>
    <string name="menu_adventures">Adventures</string>
    <string name="menu_adventurer">Adventurer</string>
    <string name="menu_logout">Logout</string>

    <!--Create Profile Strings-->

    <string name="create_profile">Welcome to KickIT! In order to create a profile please enter all the information
        below!
    </string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="update_button">Save</string>
    <string name="uploadPic">Upload a Picture</string>
    <string name="update_profile">Make any changes and save when done! [When uploading a new Profile Pic Logout and In
        again for changes to applied]
    </string>
    <string name="password_help">Must Contain: Number, Letter and be 8 Characters</string>


    <!--View Profile-->

    <string name="adventurer">Adventurer</string>
    <string name="surnamePlaceholder">Surname:</string>
    <string name="completed_challenged">Completed Challenges</string>
    <string name="name_placeholder">Name:</string>
    <string name="edit_profile">Edit</string>
    <string name="invites">Challenge Invites: </string>

    <!--Args-->

    <string name="login_pref">adventurer_login</string>
    <string name="LOAD_TYPE">load_type</string>
    <string name="LOAD_CREATE_PROFILE">create_profile</string>
    <string name="LOAD_EDIT_PROFILE">edit_profile</string>

    <!--Suggest Challenge-->
    <string name="suggest_challenge">Please send us your idea of a new challenge for your fellow adventurers to
        complete!
    </string>
    <string name="suggested_bucketlist">Which bucketlist do you think your challenge is most suited for?</string>
    <string name="challenge_name">Challenge Name</string>
    <string name="challenge_description">Short description</string>
    <string name="challenge_price">Suggested cost</string>
    <string name="challenge_points">Suggested points</string>
    <string name="suggest_button">Suggest Challenge</string>

    <!-- BucketList page -->
    <string name="label_reqP">Required Points:</string>
    <string name="label_Instruction">Tap a challenge to view/accept</string>

    <!--Splash Screen-->

    <string name="splash_disclaimer">KickIT Requires an Internet Connection. Load times are effected by connection
        speed, please be patient!
    </string>

    <!--Friends List-->

    <string name="add_friend">Add Friend</string>
    <string name="enter_email">Enter Persons Email</string>

    <!-- Home Page -->
    <string name="poster">Poster</string>
    <string name="verify">Verify</string>
    <string name="report">Report</string>
    <string name="feedback">Add Feedback</string>

    <!-- View Challenge page -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_add">Add</string>
    <string name="label_ChallengeDescr">Description</string>
    <string name="label_ChallengePo">Points</string>
    <string name="label_ChallengePr">Price</string>
    <string name="button_remove">Remove</string>
    <string name="button_complete">Complete challenge</string>
    <string name="button_invite_comrad">Invite Comrade</string>
    <string name="label_comrades">Comrades joining in challenge:</string>
    <string name="label_select_comrade">Please select a comrade to invite:</string>

    <!-- Invite Comrade page -->
    <string name="btn_invite">Invite</string>
    <string name="label_invite">Select one of your friends to send an invite to. Once they accept they will be added to your fellow comrades in this challenge!</string>

    <!-- Progress Page -->
    <string name="label_progress">Progress</string>
    <string name="label_total_score">Total Score:</string>
    <string name="label_stats">Stats:</string>
    <string name="label_goldenB_won">Golden boots won:</string>
    <string name="label_total_spent">Total spent on challenges:</string>
    <string name="label_challengesC">Challenges completed:</string>
</resources>
