<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp" android:text="@string/suggest_challenge"
                android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cn_textInput"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView4">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/challengeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/challenge_name"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cd_textInput"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/cn_textInput">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/challengeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/challenge_description"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cPo_textInput"
                android:layout_width="0dp"
                android:layout_height="75dp" android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cd_textInput">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/challengePoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/challenge_points" android:inputType="number" android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cPr_textInput"
                android:layout_width="0dp"
                android:layout_height="75dp" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/cPo_textInput">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/challengePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/challenge_price" android:inputType="number" android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                android:text="@string/suggested_bucketlist" android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cPr_textInput"/>
        <Spinner
                android:id="@+id/bucketSpinner"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView5"/>

        <Button
                android:id="@+id/btnSuggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" android:text="@string/suggest_button"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/bucketSpinner"/>
        <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cancel" app:layout_constraintBaseline_toBaselineOf="@+id/btnSuggest"
                app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
                android:id="@+id/progressBarSuggest"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/btnCancel"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


