<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ViewProfileActivity">

    <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" android:id="@+id/include"/>


    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/profilePicture"
            android:contentDescription="profilePicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@tools:sample/avatars" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/include"/>
    <TextView
            android:text="@string/adventurer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp" android:textStyle="bold" android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/profilePicture"/>
    <TextView
            android:text="@string/completed_challenged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp" android:textStyle="bold" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewEmail" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/viewEmail" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.37"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp" android:text="@string/name_placeholder"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewFirstName" tools:text="asd" android:layout_marginStart="48dp"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"/>
    <TextView
            android:text="@string/surnamePlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.389" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginTop="16dp"/>
    <TextView
            android:text="asdasd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewSurname" android:layout_marginStart="28dp"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView12"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            android:id="@+id/completed_challenges" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEditProfile"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/completed_challenges"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.975"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="editProfileClicked"/>


</androidx.constraintlayout.widget.ConstraintLayout>