<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="50dp">

    <TextView
            android:id="@+id/poster_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poster"
            android:textSize="30sp"
            android:textStyle="bold" />

    <ProgressBar
            android:id="@+id/postImageLoading"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

    <ImageView
            android:id="@+id/post_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            tools:srcCompat="@tools:sample/avatars" />

    <TextView
            android:id="@+id/post_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/report_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/report" />

        <Button
                android:id="@+id/verify_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verify" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/feedback_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        <Button
                android:id="@+id/add_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feedback" />
    </LinearLayout>

    <ProgressBar
            android:id="@+id/loadingComments"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
</LinearLayout>