<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical"
              tools:context=".CreateProfileActivity">

    <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" android:id="@+id/include"/>


    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:indeterminate="true" android:visibility="invisible"/>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           app:layout_constraintHorizontal_bias="0.5"
                                                           app:layout_constraintEnd_toEndOf="parent">
            <TextView
                    android:text="@string/create_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/welcome_textview"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_textview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/fn_textInput">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:id="@+id/firstName" android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/fn_textInput"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/sn_textInput">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname"
                        android:id="@+id/surnameName" android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/sn_textInput"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/em_textInput">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:id="@+id/email" android:singleLine="true" android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/em_textInput"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/tn_textInput">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telephone"
                        android:id="@+id/telephone" android:singleLine="true" android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/tn_textInput"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/pw_textInput">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:id="@+id/password" android:singleLine="true" android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/pw_textInput"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/pwr_textInput">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/retype_password"
                        android:id="@+id/retype_password" android:singleLine="true" android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/uploadProfilePic"
                    android:contentDescription="profilePicture"
                    tools:srcCompat="@tools:sample/avatars"
                    android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/pwr_textInput"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.044"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                    android:text="@string/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/cancel"
                    android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/uploadProfilePic"/>
            <Button
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancel"
                    app:layout_constraintStart_toEndOf="@+id/signUp" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/signUp"
                    android:onClick="cancelClick"/>
            <Button
                    android:text="@string/uploadPic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button" android:layout_marginStart="12dp"
                    app:layout_constraintStart_toEndOf="@+id/uploadProfilePic" android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/pwr_textInput" android:onClick="pickPicture"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</LinearLayout>



